--- a/root/assets/sass/base/forms.scss
+++ b/root/assets/sass/base/forms.scss
@@ -4,22 +4,15 @@
 
 =========================================================== */
 
-.input,
+input,
 select,
 textarea {
 	background: none;
 	border: $border-width solid $border-colour;
 	border-radius: $border-radius;
 	padding: 1rem 1.5rem;
-	resize: none;
 	transition: border $speed ease;
 	width: 100%;
-
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	-ms-appearance: none;
-	-o-appearance: none;
-	appearance: none;
 
 	&:focus {
 		border-color: $pri;
@@ -28,11 +21,8 @@ textarea {
 
 textarea {
 	overflow: auto; // Hide scrollbar IE
+	resize: none;
 }
-
-
-
-//= LABEL ====================================================
 
 label {
 	display: block;
@@ -40,7 +30,7 @@ label {
 	padding-bottom: $line-height / 2;
 
 	&:first-child {
-		padding-top: 0;
+		margin-top: 0;
 	}
 }
 
@@ -48,89 +38,22 @@ label[for] {
 	cursor: pointer;
 }
 
-.label__note {
-	color: $border-colour;
-	float: right;
-	font-size: .8em;
-	font-style: italic;
-}
-
-
-
-//= SELECT ===================================================
-
-.select {
-	position: relative;
-	vertical-align: middle;
-	z-index: 1;
-
-	select {
-		position: relative;
-		text-indent: .01px;
-		text-overflow: '';
-		z-index: 1;
-
-		&::-ms-expand {
-		    display: none;
-		}
-
-		.lt-ie10 & {
-			padding-right: 1rem;
-		}
-	}
-
-	&:after {
-		background: $background-colour;
-		border-radius: 0 $border-radius - $border-width $border-radius - $border-width 0;
-		box-sizing: border-box;
-		color: $border-colour;
-		content: '\25BE';
-		display: block;
-		height: calc( 100% - .2rem );
-		padding: 1rem 1.5rem;
-		position: absolute;
-		pointer-events: none;
-		right: $border-width;
-		top: $border-width;
-		z-index: 0;
-
-		.lt-ie10 & {
-			display: none;
-		}
-	}
-}
-
-// FireFox 30 hide native down arrow
-:-moz-any( .select ):after {
-	z-index: 1;
-}
-
-
-
-//= BUTTON ===================================================
-
-.input + .button,
-.select + .button,
-textarea + .button {
-	margin-top: $line-height * 2;
-}
-
 
 
 //= PLACEHOLDER ==============================================
 
 ::-webkit-input-placeholder {
-   color: $border-colour;
+   color: $placeholder-colour;
 }
 
 :-moz-placeholder { // Firefox 18-
-   color: $border-colour;
+   color: $placeholder-colour;
 }
 
 ::-moz-placeholder {  // Firefox 19+
-   color: $border-colour;
+   color: $placeholder-colour;
 }
 
 :-ms-input-placeholder {
-   color: $border-colour;
+   color: $placeholder-colour;
 }
