--- a/root/assets/sass/objects/media.scss
+++ b/root/assets/sass/objects/media.scss
@@ -11,7 +11,6 @@ img {
 
 .o-media {
 	img {
-		border-radius: $border-radius;
 		width: 100%;
 	}
 }
@@ -50,7 +49,12 @@ img {
 	.o-media--left,
 	.o-media--right {
 		margin-bottom: $line-height;
+		margin-top: $line-height;
 		width: 40%;
+
+		+ * {
+			margin-top: $line-height;
+		}
 	}
 
 	.o-media--left {
