--- a/root/assets/sass/objects/page.scss
+++ b/root/assets/sass/objects/page.scss
@@ -16,7 +16,6 @@ html {
 }
 
 .o-page__content {
-	flex: 1;
+	flex: 1 1 auto;
 	width: 100%;
-	-ms-flex-preferred-size: auto;	// IE10 tweener syntax
 }
