--- a/root/assets/sass/settings/global.scss
+++ b/root/assets/sass/settings/global.scss
@@ -14,6 +14,9 @@ $old-ie: false!default;
 
 =========================================================== */
 
+$white: #FFFFFF;
+$black: #000000;
+
 $pri: #57B275;
 $sec: #F05D71;
 $ter: #F2D044;
@@ -27,25 +30,26 @@ $ter: #F2D044;
 =========================================================== */
 
 $font-family:			Arial, Helvetica, Geneva, sans-serif;
-$font-size--small:		2rem;
-$font-size--large:		2.2rem;
+$font-size--small:		1.8rem;
+$font-size--large:		2rem;
 $line-height:			1.4em;
-$type-scale--small:		1.100;
+$type-scale--small:		1.125;
 $type-scale--medium:	1.150;
-$type-scale--large:		1.200;
+$type-scale--large:		1.175;
 
-$text-colour:			#000;
-$background-colour:		#fff;
+$text-colour:			$black;
+$background-colour:		$white;
 $border-colour:			#ccc;
 $link-colour:			$pri;
 $link-colour-hover:		$sec;
+$placeholder-colour:	#ccc;
 $highlight-colour:		lighten( $pri, 20 );
 
 $padding--small:		4rem;
 $padding--medium:		6rem;
 $padding--large:		8rem;
 
-$border-width: 			.1rem;
+$border-width: 			.2rem;
 $border-radius: 		.4rem;
 $speed: 				.3s;
 
