--- a/root/assets/sass/components/buttons.scss
+++ b/root/assets/sass/components/buttons.scss
@@ -4,26 +4,27 @@
 
 =========================================================== */
 
-.button {
+.c-button {
 	border-radius: $border-radius;
 	display: inline-block;
 	line-height: 1;
 	padding: 1.5rem 2rem;
 	transition: background $speed ease,
 				box-shadow $speed ease,
-				color $speed ease;
+				color $speed ease,
+				transform $speed ease;
 
 	&:hover,
 	&:focus {
 		color: $white;
 	}
 
-	&:focus {
-		box-shadow: 0 .3rem 0 0 rgba( $black, .1 );
+	&:active {
+		transform: $active-scale-small;
 	}
 }
 
-.button--primary {
+.c-button--primary {
 	background: $pri;
 	color: $white;
 
@@ -33,7 +34,7 @@
 	}
 }
 
-.button--secondary {
+.c-button--secondary {
 	background: $sec;
 	color: $white;
 
@@ -43,7 +44,7 @@
 	}
 }
 
-.button--disabled {
+.c-button--disabled {
 	background: $border-colour;
 	color: $white;
 	cursor: not-allowed;
