added forms and typography to style guide

--- a/dev/patterns/src/components/table-scroll.hbs
+++ b/dev/patterns/src/components/table-scroll.hbs
@@ -1,6 +1,5 @@
-<div class="table-responsive table-responsive--scroll">
+<div class="o-table o-table--scroll">
     <table summary="Table Summary">
-        <caption>{{caption}}</caption>
         <thead>
             <tr>
                 {{#each headings}}
