--- a/dev/patterns/src/components/table-stacked.hbs
+++ b/dev/patterns/src/components/table-stacked.hbs
@@ -1,6 +1,5 @@
-<div class="table-responsive table-responsive--stacked">
+<div class="o-table o-table--stacked">
     <table summary="Table Summary">
-        <caption>{{caption}}</caption>
         <thead>
             <tr>
                 {{#each headings}}
