--- a/dev/patterns/src/pages/styleguide/colour.hbs
+++ b/dev/patterns/src/pages/styleguide/colour.hbs
@@ -7,7 +7,7 @@ description: "<p>Mauris convallis hendrerit ipsum quis ultricies. Aliquam ornare
 
 <section class="gko-ptrnlab-colours">
 	<header class="gko-ptrnlab-doc-header">
-		<h1 class="gko-ptrnlab-doc-header__heading"><span style="font-weight:normal;">Core</span> colours</h1>
+		<h1 class="gko-ptrnlab-doc-header__heading">Core colours</h1>
 	</header>
 
 	<ul class="gko-ptrnlab-colours__list">
@@ -26,7 +26,7 @@ description: "<p>Mauris convallis hendrerit ipsum quis ultricies. Aliquam ornare
 
 <section class="gko-ptrnlab-colours">
 	<header class="gko-ptrnlab-doc-header">
-		<h1 class="gko-ptrnlab-doc-header__heading"><span style="font-weight:normal;">Extended</span> colours</h1>
+		<h1 class="gko-ptrnlab-doc-header__heading">Extended colours</h1>
 	</header>
 
 	<ul class="gko-ptrnlab-colours__list">
