--- a/dev/patterns/src/pages/styleguide/tables.hbs
+++ b/dev/patterns/src/pages/styleguide/tables.hbs
@@ -6,7 +6,7 @@ description: "<p>Mauris convallis hendrerit ipsum quis ultricies. Aliquam ornare
 
 <section class="gko-ptrnlab-colours">
 	<header class="gko-ptrnlab-doc-header">
-		<h1 class="gko-ptrnlab-doc-header__heading"><span style="font-weight:normal;">Scroll</span> table</h1>
+		<h1 class="gko-ptrnlab-doc-header__heading">Scroll table</h1>
 	</header>
 
 	{{> table-scroll table }}
@@ -14,7 +14,7 @@ description: "<p>Mauris convallis hendrerit ipsum quis ultricies. Aliquam ornare
 
 <section class="gko-ptrnlab-colours">
 	<header class="gko-ptrnlab-doc-header">
-		<h1 class="gko-ptrnlab-doc-header__heading"><span style="font-weight:normal;">Stacked</span> table</h1>
+		<h1 class="gko-ptrnlab-doc-header__heading">Stacked table</h1>
 	</header>
 
 	{{> table-stacked table }}
