--- a/dev/patterns/src/pages/styleguide/typography.hbs
+++ b/dev/patterns/src/pages/styleguide/typography.hbs
@@ -7,7 +7,7 @@ description: "<p>Mauris convallis hendrerit ipsum quis ultricies. Aliquam ornare
 
 <section class="gko-ptrnlab-colours">
 	<header class="gko-ptrnlab-doc-header">
-		<h1 class="gko-ptrnlab-doc-header__heading"><span style="font-weight:normal;">Heading</span> elements</h1>
+		<h1 class="gko-ptrnlab-doc-header__heading">Heading elements</h1>
 	</header>
 
 	{{#each typography.headings}}
@@ -17,7 +17,7 @@ description: "<p>Mauris convallis hendrerit ipsum quis ultricies. Aliquam ornare
 
 <section class="gko-ptrnlab-colours">
 	<header class="gko-ptrnlab-doc-header">
-		<h1 class="gko-ptrnlab-doc-header__heading"><span style="font-weight:normal;">Intro</span> text</h1>
+		<h1 class="gko-ptrnlab-doc-header__heading">Intro text</h1>
 	</header>
 
 	{{{typography.intro}}}
@@ -25,7 +25,7 @@ description: "<p>Mauris convallis hendrerit ipsum quis ultricies. Aliquam ornare
 
 <section class="gko-ptrnlab-colours">
 	<header class="gko-ptrnlab-doc-header">
-		<h1 class="gko-ptrnlab-doc-header__heading"><span style="font-weight:normal;">Paragraph</span> text</h1>
+		<h1 class="gko-ptrnlab-doc-header__heading">Paragraph text</h1>
 	</header>
 
 	{{{typography.paragraph}}}
@@ -33,7 +33,7 @@ description: "<p>Mauris convallis hendrerit ipsum quis ultricies. Aliquam ornare
 
 <section class="gko-ptrnlab-colours">
 	<header class="gko-ptrnlab-doc-header">
-		<h1 class="gko-ptrnlab-doc-header__heading"><span style="font-weight:normal;">Unordered</span> list</h1>
+		<h1 class="gko-ptrnlab-doc-header__heading">Unordered list</h1>
 	</header>
 
 	<ul>
@@ -54,7 +54,7 @@ description: "<p>Mauris convallis hendrerit ipsum quis ultricies. Aliquam ornare
 
 <section class="gko-ptrnlab-colours">
 	<header class="gko-ptrnlab-doc-header">
-		<h1 class="gko-ptrnlab-doc-header__heading"><span style="font-weight:normal;">Ordered</span> list</h1>
+		<h1 class="gko-ptrnlab-doc-header__heading">Ordered list</h1>
 	</header>
 
 	<ol>
@@ -71,4 +71,12 @@ description: "<p>Mauris convallis hendrerit ipsum quis ultricies. Aliquam ornare
 			</li>
 		{{/each}}
 	</ol>
+</section>
+
+<section class="gko-ptrnlab-colours">
+	<header class="gko-ptrnlab-doc-header">
+		<h1 class="gko-ptrnlab-doc-header__heading">Blockquote</h1>
+	</header>
+
+	{{> blockquote blockquote }}
 </section>
