--- a/dev/patterns/src/pages/styleguide/forms.hbs
+++ b/dev/patterns/src/pages/styleguide/forms.hbs
@@ -7,118 +7,49 @@ description: "<p>Mauris convallis hendrerit ipsum quis ultricies. Aliquam ornare
 
 <section class="gko-ptrnlab-colours">
 	<header class="gko-ptrnlab-doc-header">
-		<h1 class="gko-ptrnlab-doc-header__heading"><span style="font-weight:normal;">Input</span> fields</h1>
+		<h1 class="gko-ptrnlab-doc-header__heading">Input fields</h1>
 	</header>
 
-	<div class="o-form__field">
-		<label class="o-label" for="textInput">Text input <span class="o-label__note">Optional</span></label>
-		<input class="o-input" id="textInput" type="text" placeholder="Placeholder">
-	</div>
+	{{> input forms.input-optional }}
 
-	<div class="o-form__field">
-		<label class="o-label" for="passwordInput">Password</label>
-		<input class="o-input" id="passwordInput" type="password" placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;">
-	</div>
+	{{> input forms.input-password }}
 
-	<div class="o-form__field">
-		<label class="o-label" for="websiteInput">Website</label>
-		<input class="o-input" id="websiteInput" type="url" placeholder="http://website.co.uk">
-	</div>
+	{{> input forms.input-website }}
 
-	<div class="o-form__field">
-		<label class="o-label" for="emailInput">Email</label>
-		<input class="o-input" id="emailInput" type="email" placeholder="name@company.co.uk">
-	</div>
+	{{> input forms.input-email }}
 
-	<div class="o-form__field">
-		<label class="o-label" for="searchInput">Search</label>
-		<input class="o-input" id="searchInput" type="search" placeholder="Search...">
-	</div>
+	{{> input forms.input-search }}
 
-	<div class="o-form__field">
-		<label class="o-label" for="textarea">Message <span class="o-label__note">Optional</span></label>
-		<textarea class="o-textarea" id="textarea" cols="30" rows="10" placeholder="Enter your message here..."></textarea>
-	</div>
+	{{> textarea forms.textarea-optional }}
 </section>
 
 <section class="gko-ptrnlab-colours">
 	<header class="gko-ptrnlab-doc-header">
-		<h1 class="gko-ptrnlab-doc-header__heading"><span style="font-weight:normal;">Select</span> field</h1>
+		<h1 class="gko-ptrnlab-doc-header__heading">Select field</h1>
 	</header>
 
-	<div class="o-form__field">
-		<label class="o-label" for="select">Select</label>
-		<div class="o-select">
-			<select id="select" name="select">
-				<option value="n/a" selected>Please select...</option>
-				<option value="Option one">Option one</option>
-				<option value="Option two">Option two</option>
-			</select>
-		</div>
-	</div>
+	{{> select forms.select-optional }}
 </section>
 
 <section class="gko-ptrnlab-colours">
 	<header class="gko-ptrnlab-doc-header">
-		<h1 class="gko-ptrnlab-doc-header__heading"><span style="font-weight:normal;">Check</span>box</h1>
+		<h1 class="gko-ptrnlab-doc-header__heading">Checkbox</h1>
 	</header>
 
-	<div class="o-form__field">
-		<fieldset class="o-fieldset">
-			<legend class="o-fieldset__legend">Checkbox <span class="o-label__note">Optional</span></legend>
-			<ul class="o-fieldset__list">
-				<li class="o-fieldset__item">
-					<label class="o-label" for="checkbox1">
-						<input id="checkbox1" type="checkbox"> Choice A
-					</label>
-				</li>
-				<li class="o-fieldset__item">
-					<label class="o-label" for="checkbox2">
-						<input id="checkbox2" type="checkbox"> Choice B
-					</label>
-				</li>
-				<li class="o-fieldset__item">
-					<label class="o-label" for="checkbox3">
-						<input id="checkbox3" type="checkbox"> Choice C
-					</label>
-				</li>
-			</ul>
-		</fieldset>
-	</div>
+	{{> checkbox forms.checkbox }}
 </section>
 
 <section class="gko-ptrnlab-colours">
 	<header class="gko-ptrnlab-doc-header">
-		<h1 class="gko-ptrnlab-doc-header__heading"><span style="font-weight:normal;">Radio</span> buttons</h1>
+		<h1 class="gko-ptrnlab-doc-header__heading">Radio buttons</h1>
 	</header>
 
-	<div class="o-form__field">
-		<fieldset class="o-fieldset">
-			<legend class="o-fieldset__legend">Radio buttons</legend>
-			<ul class="o-fieldset__list">
-				<li class="o-fieldset__item">
-					<label class="o-label" for="radio1">
-						<input id="radio1" name="radio" type="radio"> Option 1
-					</label>
-				</li>
-				<li class="o-fieldset__item">
-					<label class="o-label" for="radio2">
-						<input id="radio2" name="radio" type="radio"> Option 2
-					</label>
-				</li>
-				<li class="o-fieldset__item">
-					<label class="o-label" for="radio3">
-						<input id="radio3" name="radio" type="radio"> Option 3
-					</label>
-				</li>
-			</ul>
-		</fieldset>
-	</div>
+	{{> radio forms.radio }}
 </section>
 
 <section class="gko-ptrnlab-colours">
 	<header class="gko-ptrnlab-doc-header">
-		<h1 class="gko-ptrnlab-doc-header__heading"><span style="font-weight:normal;">Buttons</span></h1>
+		<h1 class="gko-ptrnlab-doc-header__heading">Buttons</h1>
 	</header>
 
 	<div class="o-form__field">
