--- a/dev/assets/sass/settings/global.scss
+++ b/dev/assets/sass/settings/global.scss
@@ -33,6 +33,8 @@ $ter: #F2D044;
 =========================================================== */
 
 $font-family:			Arial, Helvetica, Geneva, sans-serif;
+$font-size-body-small:	1.8em;
+$font-size-body-large:	2em;
 $font-size--small:		1.8rem;
 $font-size--large:		2rem;
 $line-height:			1.4em;
