email templates added

--- a/dev/emails/src/pages/example.hbs
+++ b/dev/emails/src/pages/example.hbs
@@ -3,16 +3,5 @@ title: Template File Title
 layout: default.hbs
 ---
 
-<table border="0" width="570" align="center">
-    <tr>
-        <td class="content">
-            <h1>This is a template</h1>
-
-            <p>This could be a greeting,</p>
-
-            <p>Some text to describe what the email is about with <a href="#">a link</a>.</p>
-
-            <p>This could be a thank you message!</p>
-        </td>
-    </tr>
-</table>
+{{> header }}
+{{> hero }}
