--- a/dev/emails/src/layouts/default.hbs
+++ b/dev/emails/src/layouts/default.hbs
@@ -9,10 +9,10 @@
 	    <title>{{ title }}</title>
 	</head>
 	<body>
-	    <table border="0" id="backgroundTable">
+	    <table cellpadding="0" cellspacing="0" border="0" width="100%" class="page">
 	        <tr>
 	            <td valign="top">
-	                <table border="0" align="center" width="570">
+	                <table cellpadding="0" cellspacing="0" border="0" width="100%">
 	                    <tr>
 	                        <td>
 
