added new styleguide

--- a/dev/assets/sass/base/table.scss
+++ b/dev/assets/sass/base/table.scss
@@ -5,14 +5,30 @@
 =========================================================== */
 
 table {
-	border: $border-width solid $border-colour;
+	border: none;
 	border-collapse: collapse;
 	width: 100%;
 }
 
+th {
+	font-weight: bold;
+}
+
 th,
 td {
-	border-bottom: $border-width solid $border-colour;
+	border-bottom: none;
 	padding: 1rem 2rem;
 	text-align: left;
+}
+
+tr:nth-child( odd ) td {
+	background: $border-colour;
+
+	&:first-child {
+		border-radius: $border-radius 0 0 $border-radius;
+	}
+
+	&:last-child {
+		border-radius: 0 $border-radius $border-radius 0;
+	}
 }
