--- a/dev/assets/sass/base/forms.scss
+++ b/dev/assets/sass/base/forms.scss
@@ -17,20 +17,45 @@ textarea {
 	&:focus {
 		border-color: $pri;
 	}
+
+	.is-valid & {
+		border-color: $success;
+	}
+
+	.is-invalid & {
+		border-color: $error;
+	}
+
+	.is-disabled & {
+		background: $disabled;
+		cursor: not-allowed;
+	}
 }
 
 textarea {
 	overflow: auto; // Hide scrollbar IE
 	resize: vertical;
+
+	.is-disabled & {
+		resize: none;
+	}
 }
 
 label {
 	display: block;
 	padding-bottom: 1rem;
+
+	.is-disabled & {
+		cursor: not-allowed;
+	}
 }
 
 label[for] {
 	cursor: pointer;
+
+	.is-disabled & {
+		cursor: not-allowed;
+	}
 }
 
 
