--- a/dev/assets/sass/objects/table.scss
+++ b/dev/assets/sass/objects/table.scss
@@ -31,5 +31,15 @@
 				width: 100%;
 			}
 		}
+
+		tr:nth-child( odd ) td {
+			&:first-child {
+				border-radius: $border-radius $border-radius 0 0;
+			}
+
+			&:last-child {
+				border-radius: 0 0 $border-radius $border-radius;
+			}
+		}
 	}
 }
